# Q3_Python

./: README.md
.devcontainer/: devcontainer.json
100Days With Harry/: exercise2.py
Assignments/05_secure_data_encryption/: securedata.py
Assignments/06_Build_Compose_and_Decorate_A_Complete_Traditional_OOP_Practice_Series/: 10_instance_methods.py  11_class_methods.py  12_static_methods.py  13_Composition.py  14_aggregation.py  15_method_resolution_order_(MRO)_and_diamond_inheritance.py  16_function_decorators.py  17_class_decorators.py  18_property_decorators_property_setter_and_deleter.py  19_callable_and___call__.py  1_using_self.py  20_creating_a_custom_exception.py  21_make_a_custom_class_iterable.py  2_using_cls.py  3_public_variables_and_methods.py  4_class_variables_and_class_methods.py  5_static_variables_and_static_methods.py  6_constructors_and_destructors.py  7_Access_Modifiers_Public_Private_and_Protected.py  8_the_super_function.py  9_abstract_classes_and_methods.py
Assignments/1st Assignments Sir Zia/: app.py
Project/: README.md
Project/advance-agent/: chainlit.yaml  main.py
Unicron Developer Youtuber/contextlecture4/: .env  pyproject.toml
Unicron Developer Youtuber/contextlecture4/src/contextlecture4/: __init__.py  contextex.py
onsite_classes/10th_class/assignment_14_july_2025/: pyproject.toml
onsite_classes/10th_class/assignment_14_july_2025/src/assignment_14_july_2025/: __init__.py  country_info_toolkit.py  mood_handoff.py  product_suggester.py
💯 100_days_with_harry/: exercise1.py  exercise4.py
💯100_days_with_harry/: exercise3.py
(+119 files in other folders)
